fixed flex overflow

--- a/HTML/style.css
+++ b/HTML/style.css
@@ -352,13 +352,15 @@ input[type=email]{
     margin-bottom: 4rem;
  }
 
-.slideshow h3{
-    line-height:0%
-}
+ .slideshow h3{
+    font-weight: bold;
+    margin-bottom: 0.25rem;
+ }
 
  .image-wrapper{
     display: flex;
     align-items: center;
+    box-sizing: border-box;
  }
 
 .fa-chevron-left{
@@ -656,10 +658,26 @@ input[type=email]{
         grid-column: 1 / span 10;
     }
 
+    .slideshow{
+        justify-content: space-around;
+    }
+
+    .slideshow h3{
+        box-sizing: border-box;
+    }
+
+    .slideshow p{
+        box-sizing: border-box;
+    }
+
     .image-wrapper{
         width: auto;
-        height: 80vh; 
+        min-height: 80vh; 
         max-width: 100%;
+    }
+
+    .slides{
+        align-self: flex-start;
     }
 
     .modal-content{
